--- a/templates/index.html
+++ b/templates/index.html
@@ -25,25 +25,29 @@
 </head>
 <body>
     <div id="main">
-        <div style="padding-bottom: 80px;">
+        <div style="padding-bottom: 80px;padding-bottom: 200px;">
             <h1>Proportion hommes/femmes</h1>
             <canvas id="graph1"></canvas>
+        </div>
+        <div style="padding-bottom: 200px;">
+            <h1>Emotions</h1>
+            <canvas id="graph4"></canvas>
+        </div>
+        <div style="padding-bottom: 200px;">
+            <h1>Différentes moyennes d'âge</h1>
+            <canvas id="graph2" style="width:600Px;height:700px;"></canvas>
+        </div>
+        <div style="width:600Px;height:800px;">
+            <h1>Tranches d'âges</h1>
+            <canvas id="graph5"></canvas>
         </div>
         <div>
             <h1>Tranches d'âges</h1>
             <canvas id="graph3"></canvas>
         </div>
         <div>
-            <h1>Emotions</h1>
-            <canvas id="graph4"></canvas>
-        </div>
-        <div>
-            <h1>Différentes moyennes d'âge</h1>
-            <canvas id="graph2" style="width:600Px;height:800px;"></canvas>
-        </div>
-        <div style="width:600Px;height:800px;">
-            <h1>Tranches d'ages</h1>
-            <canvas id="graph5"style="width:600Px;height:800px;" ></canvas>
+            <h1>Tranches d'âges</h1>
+            <canvas id="graph6" style="width:600Px;height:700px;"></canvas>
         </div>
     </div>
     <script>
@@ -139,7 +143,7 @@
                 datasets:[{
                     label: 'Age moyen',
                     data:[averageAge, averageAgeMan, averageAgeWomen],
-                    backgroundColor: ['rgb(54, 162, 235)','rgb(54, 162, 235)','rgb(54, 162, 235)'],
+                    backgroundColor: ['rgb(54, 162, 235)'],
                     borderWidth: 1
                 }]
             }
@@ -274,7 +278,6 @@
                     plugins: {
                         title: {
                             display: true,
-                            text: "Radar tranches d'ages"
                         }
                     },
                     y: {
@@ -292,6 +295,50 @@
             };
 
             let graph5 = new Chart(ctx5, config5)
+
+
+            //GRAP 6 --------------------------------------------------------------
+
+            
+
+            ctx6 = document.getElementById("graph6").getContext('2d')   
+
+            let dataGraph6 = {
+                labels : agesRangeLabels,
+                datasets:[{
+                    label: "Tranches d'ages",
+                    data: agesRange,
+                    backgroundColor:['rgb(54, 162, 235)'],
+                    borderWidth: 1
+                }]
+            }
+            
+            
+            let config6 = {
+                type: 'bar',
+                data: dataGraph6,
+                options: {
+                    responsive: true,
+                    plugins: {
+                        title: {
+                            display: true,
+                        }
+                    },
+                    y: {
+            min: 0,
+            max: averageAge + 10,
+            },
+            scale: {
+                ticks: {
+                    max:40
+                }
+    }
+
+                }
+                
+            };
+
+            let graph6 = new Chart(ctx6, config6)
         })
             
 
