--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             text-align: center;
             padding-bottom: 15px;
             padding-left: 15px;
-            width: 600px;
+            width: 680px;
         }
         h1{
             font-family: saira;
@@ -50,17 +50,14 @@
         <div class="buttons">
             <button class="btn" onclick="prev()">Prev</button>
             <h1 id="title">Proportion hommes/femmes</h1>          
-                <!-- <h1>Emotions</h1> -->
-                <!-- <h1>Différentes moyennes d'âge</h1> -->
-                <!-- <h1>Tranches d'âges</h1> -->
             <button class="btn" onclick="next()">Next</button>
         </div>
         <div class="slider">
             <!-- Graphes -->
                 <canvas id="graph1" style="display:block"></canvas>
                 <canvas id="graph2" style="display:none"></canvas>
-                <canvas id="graph3" style="display:none"></canvas>
-                <canvas id="graph4" style="display:none"></canvas>
+                <canvas id="graph3" style="display:none; height:250px"></canvas>
+                <canvas id="graph4" style="display:none; height:250px"></canvas>
         </div>
     </div>
     <script>
